# Tsing-Siemens-Competiton

./: kinova_gazebo使用说明.docx
devel/: .catkin  .rosinstall  setup.sh
devel/include/kinova_msgs/: AddPoseToCartesianTrajectoryRequest.h  AddPoseToCartesianTrajectoryResponse.h  ArmJointAnglesAction.h  ArmJointAnglesActionFeedback.h  ArmJointAnglesActionGoal.h  ArmJointAnglesActionResult.h  ArmJointAnglesFeedback.h  ArmJointAnglesGoal.h  ArmJointAnglesResult.h  ArmPoseAction.h  ArmPoseActionFeedback.h  ArmPoseActionGoal.h  ArmPoseActionResult.h  ArmPoseFeedback.h  ArmPoseGoal.h  ArmPoseResult.h  Arm_KinovaPoseAction.h  Arm_KinovaPoseActionFeedback.h  Arm_KinovaPoseActionGoal.h  Arm_KinovaPoseActionResult.h  Arm_KinovaPoseFeedback.h  Arm_KinovaPoseGoal.h  Arm_KinovaPoseResult.h  CartesianForce.h  ClearTrajectoriesRequest.h  ClearTrajectoriesResponse.h  FingerPosition.h  HomeArmRequest.h  HomeArmResponse.h  JointAngles.h  JointTorque.h  JointVelocity.h  KinovaPose.h  PoseVelocity.h  RunCOMParametersEstimationRequest.h  RunCOMParametersEstimationResponse.h  SetEndEffectorOffsetRequest.h  SetEndEffectorOffsetResponse.h  SetFingersPositionAction.h  SetFingersPositionActionFeedback.h  (+19 more)
devel/include/object_recognition_msgs/: GetObjectInformationRequest.h  GetObjectInformationResponse.h  ObjectInformation.h  ObjectRecognitionAction.h  ObjectRecognitionActionFeedback.h  ObjectRecognitionActionGoal.h  ObjectRecognitionActionResult.h  ObjectRecognitionFeedback.h  ObjectRecognitionGoal.h  ObjectRecognitionResult.h  ObjectType.h  RecognizedObject.h  RecognizedObjectArray.h  Table.h  TableArray.h
devel/lib/kinect2_bridge/: kinect2_bridge
devel/lib/kinect2_calibration/: kinect2_calibration
devel/lib/kinect2_viewer/: kinect2_viewer
devel/lib/kinova_arm_moveit_demo/: motion_plan  mymotion  objectplan  objectplan1  pick_place  pick_realrobot  pick_realrobot2  pick_rr  pick_tell  pick_test  test_accuracy  work_scene
devel/lib/kinova_driver/: gripper_command_action_server  joint_trajectory_action_server  kinova_arm_driver  kinova_interactive_control  kinova_tf_updater
devel/lib/object_recognition_renderer/: trainer_planar  view_generator
devel/lib/object_recognition_ros/: object_information_server
devel/lib/object_recognition_transparent_objects/: runDetectionOnDataset  sample
devel/lib/pkgconfig/: j2n6s300_ikfast.pc  j2n6s300_moveit_config.pc  j2s7s300_ikfast.pc  j2s7s300_moveit_config.pc  kinect2_bridge.pc  kinect2_calibration.pc  kinect2_registration.pc  kinect2_viewer.pc  kinova_arm_moveit_demo.pc  kinova_bringup.pc  kinova_control.pc  kinova_demo.pc  kinova_description.pc  kinova_driver.pc  kinova_gazebo.pc  kinova_msgs.pc  m1n6s300_ikfast.pc  m1n6s300_moveit_config.pc  myrviz.pc  object_description.pc  object_gazebo.pc  object_kinect2.pc  object_recognition_capture.pc  object_recognition_core.pc  object_recognition_linemod.pc  object_recognition_msgs.pc  object_recognition_reconstruction.pc  object_recognition_renderer.pc  object_recognition_ros.pc  object_recognition_ros_visualization.pc  object_recognition_tod.pc  object_recognition_transparent_objects.pc  object_recognition_tutorials.pc  ros_gazebo_simulation.pc
src/mycontrol/: README.md
src/mycontrol/kinova_arm_moveit_demo/: CMakeLists.txt  package.xml
src/mycontrol/kinova_arm_moveit_demo/src/: mymotion.cpp  objectplan.cpp~  objectplan1.cpp  pick_place.cpp  pick_realrobot (copy).cpp~  pick_realrobot.cpp  pick_realrobot.cpp~  pick_realrobot2.cpp  pick_realrobot2.cpp~  pick_rr.cpp~  pick_tell.cpp  pick_tell.cpp~  pick_test.cpp  pick_test.cpp~
src/mycontrol/ros_gazebo_simulation/: CMakeLists.txt  package.xml
src/object/object_description/: CMakeLists.txt  package.xml
src/ork/: object_recogition_copy
(+133 files in other folders)
